--- a/recipes/templates/recipes/search_results.html
+++ b/recipes/templates/recipes/search_results.html
@@ -22,5 +22,5 @@
     <p>Brak przepisów spełniających kryteria.</p>
 {% endif %}
 
-<a href="{% url 'recipe_list' %}">Wróć do listy przepisów</a>
+<a href="{% url 'recipes:list' %}">Wróć do listy przepisów</a>
 {% endblock %}
