--- a/recipes/templates/recipes/confirm_delete_recipe.html
+++ b/recipes/templates/recipes/confirm_delete_recipe.html
@@ -7,5 +7,5 @@
     {% csrf_token %}
     <button type="submit">Tak, usuń</button>
 </form>
-<a href="{% url 'recipe_list' %}">Anuluj</a>
+<a href="{% url 'recipes:list' %}">Anuluj</a>
 {% endblock %}
