--- a/recipes/templates/recipes/recipe_list.html
+++ b/recipes/templates/recipes/recipe_list.html
@@ -58,7 +58,7 @@
                 {% if user.is_authenticated %}
                 <div class="col-12 mt-3">
                     <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" id="available_only" name="available_only" {% if available_only and available_only != 'None' %}checked{% endif %}>
+                        <input class="form-check-input" type="checkbox" id="available_only" name="available_only" value="true" {% if available_only == 'true' %}checked{% endif %}>
                         <label class="form-check-label" for="available_only">
                             <i class="bi bi-refrigerator me-1"></i>Pokaż tylko przepisy możliwe do przygotowania z produktów w lodówce
                         </label>
@@ -72,7 +72,7 @@
                     <h5>Popularne składniki:</h5>
                     <div class="ingredient-tags">
                         {% for ingredient in popular_ingredients %}
-                            <a href="?ingredient={{ ingredient.id }}{% if query %}&q={{ query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_diet %}&diet={{ selected_diet }}{% endif %}{% if available_only %}&available_only=on{% endif %}" 
+                            <a href="?ingredient={{ ingredient.id }}{% if query %}&q={{ query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_diet %}&diet={{ selected_diet }}{% endif %}{% if available_only %}&available_only=true{% endif %}" 
                                class="badge rounded-pill bg-light text-dark border {% if selected_ingredient == ingredient.id|stringformat:'i' %}bg-primary text-white{% endif %} m-1">
                                 {{ ingredient.name }}
                             </a>
@@ -86,7 +86,7 @@
                 <div class="col-12 mt-3">
                     <div class="alert alert-info">
                         <span>Filtrujesz przepisy ze składnikiem: <strong>{{ ingredient_name }}</strong></span>
-                        <a href="?{% if query %}q={{ query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_diet %}&diet={{ selected_diet }}{% endif %}{% if available_only %}&available_only=on{% endif %}" class="btn btn-sm btn-outline-secondary ms-2">
+                        <a href="?{% if query %}q={{ query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_diet %}&diet={{ selected_diet }}{% endif %}{% if available_only %}&available_only=true{% endif %}" class="btn btn-sm btn-outline-secondary ms-2">
                             <i class="bi bi-x-circle"></i> Usuń filtr
                         </a>
                     </div>
@@ -211,12 +211,12 @@
         <ul class="pagination justify-content-center">
             {% if page_obj.has_previous %}
                 <li class="page-item">
-                    <a class="page-link" href="?page=1{% if query %}&q={{ query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_diet %}&diet={{ selected_diet }}{% endif %}{% if selected_ingredient %}&ingredient={{ selected_ingredient }}{% endif %}{% if available_only %}&available_only=on{% endif %}">
+                    <a class="page-link" href="?page=1{% if query %}&q={{ query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_diet %}&diet={{ selected_diet }}{% endif %}{% if selected_ingredient %}&ingredient={{ selected_ingredient }}{% endif %}{% if available_only %}&available_only=true{% endif %}">
                         <i class="bi bi-chevron-double-left"></i>
                     </a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}{% if query %}&q={{ query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_diet %}&diet={{ selected_diet }}{% endif %}{% if selected_ingredient %}&ingredient={{ selected_ingredient }}{% endif %}{% if available_only %}&available_only=on{% endif %}">
+                    <a class="page-link" href="?page={{ page_obj.previous_page_number }}{% if query %}&q={{ query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_diet %}&diet={{ selected_diet }}{% endif %}{% if selected_ingredient %}&ingredient={{ selected_ingredient }}{% endif %}{% if available_only %}&available_only=true{% endif %}">
                         <i class="bi bi-chevron-left"></i>
                     </a>
                 </li>
@@ -227,19 +227,19 @@
                     <li class="page-item active"><span class="page-link">{{ num }}</span></li>
                 {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ num }}{% if query %}&q={{ query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_diet %}&diet={{ selected_diet }}{% endif %}{% if selected_ingredient %}&ingredient={{ selected_ingredient }}{% endif %}{% if available_only %}&available_only=on{% endif %}">{{ num }}</a>
+                        <a class="page-link" href="?page={{ num }}{% if query %}&q={{ query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_diet %}&diet={{ selected_diet }}{% endif %}{% if selected_ingredient %}&ingredient={{ selected_ingredient }}{% endif %}{% if available_only %}&available_only=true{% endif %}">{{ num }}</a>
                     </li>
                 {% endif %}
             {% endfor %}
 
             {% if page_obj.has_next %}
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.next_page_number }}{% if query %}&q={{ query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_diet %}&diet={{ selected_diet }}{% endif %}{% if selected_ingredient %}&ingredient={{ selected_ingredient }}{% endif %}{% if available_only %}&available_only=on{% endif %}">
+                    <a class="page-link" href="?page={{ page_obj.next_page_number }}{% if query %}&q={{ query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_diet %}&diet={{ selected_diet }}{% endif %}{% if selected_ingredient %}&ingredient={{ selected_ingredient }}{% endif %}{% if available_only %}&available_only=true{% endif %}">
                         <i class="bi bi-chevron-right"></i>
                     </a>
                 </li>
                 <li class="page-item">
-                    <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}{% if query %}&q={{ query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_diet %}&diet={{ selected_diet }}{% endif %}{% if selected_ingredient %}&ingredient={{ selected_ingredient }}{% endif %}{% if available_only %}&available_only=on{% endif %}">
+                    <a class="page-link" href="?page={{ page_obj.paginator.num_pages }}{% if query %}&q={{ query }}{% endif %}{% if selected_category %}&category={{ selected_category }}{% endif %}{% if selected_diet %}&diet={{ selected_diet }}{% endif %}{% if selected_ingredient %}&ingredient={{ selected_ingredient }}{% endif %}{% if available_only %}&available_only=true{% endif %}">
                         <i class="bi bi-chevron-double-right"></i>
                     </a>
             </li>
@@ -356,6 +356,7 @@ document.addEventListener('DOMContentLoaded', function() {
     const availableOnlyCheckbox = document.getElementById('available_only');
     if (availableOnlyCheckbox) {
         availableOnlyCheckbox.addEventListener('change', function() {
+            this.value = this.checked ? 'true' : '';
             this.closest('form').submit();
         });
     }
