--- a/recipes/templates/recipes/scale_recipe.html
+++ b/recipes/templates/recipes/scale_recipe.html
@@ -10,7 +10,7 @@
     {% endfor %}
 </ul>
 
-<a href="{% url 'recipe_list' %}">Wróć do listy przepisów</a>
+<a href="{% url 'recipes:list' %}">Wróć do listy przepisów</a>
 
 
 {% endblock %}
