--- a/shopping/templates/shopping/shopping_list.html
+++ b/shopping/templates/shopping/shopping_list.html
@@ -14,5 +14,5 @@
     <p>Lista zakupów jest pusta.</p>
 {% endif %}
 
-<a href="{% url 'dashboard' %}">Powrót do dashboardu</a>
+<a href="{% url 'dashboard' %}">Powrót do panelu</a>
 {% endblock %}
