--- a/templates/base.html
+++ b/templates/base.html
@@ -168,7 +168,7 @@
                     <div class="d-flex align-items-center">
                         {% if user.is_authenticated %}
                             <a href="{% url 'dashboard' %}" class="dashboard-button me-2">
-                                <i class="bi bi-speedometer2 me-1"></i>Dashboard
+                                <i class="bi bi-speedometer2 me-1"></i>Panel
                             </a>
                             <div class="dropdown">
                                 <button class="btn btn-outline-light dropdown-toggle d-flex align-items-center" type="button" id="userMenu" data-bs-toggle="dropdown" aria-expanded="false">
