--- a/templates/fridge/fridge_list.html
+++ b/templates/fridge/fridge_list.html
@@ -24,8 +24,8 @@
                         <a href="{% url 'fridge:consolidate' %}" class="btn btn-outline-secondary">
                             <i class="fas fa-compress-arrows-alt"></i> Konsoliduj
                         </a>
-                        <a href="{% url 'fridge:conversion_dashboard' %}" class="btn btn-outline-info">
-                            <i class="fas fa-exchange-alt"></i> Tablice konwersji
+                        <a href="{% url 'recipes:submit_ingredient' %}" class="btn btn-outline-info">
+                            <i class="fas fa-edit"></i> Zgłoś nowy składnik
                         </a>
                     </div>
                 </div>
